# kast

./: .clinerules  .dockerignore  .gitignore  AI-Prompts.txt  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  UPDATE.md  create_ai_prompts.sh  fix_registry.py  genai-instructions.md  install.sh  install_kast.sh  plugin_base.py  pyproject.toml  requirements.txt  test_version_detection.sh  update.sh
docs/: MIGRATION_V2_TO_V3.md  RELEASE_VALIDATION.md  VISION.md  ZAP_USAGE.md  v3.1-backlog.md  web-integration.md
docs/baseline-v2.14/: help.txt  kast-install-delta.txt  kast-post-install-packages.txt  kast-pre-install-packages.txt  kast-pre-install-tools.txt  kastweb-references.txt  sample-scan-1.manifest  version.txt
docs/baseline-v3.0-phase-a/: README.md  ai_chatbot_detection_processed.json  ftap_processed.json  kast_info.json  kast_report.html  kast_style.css  katana.txt  katana_processed.json  org_discovery_processed.json  org_discovery_raw.json  related_sites_processed.json  script_detection.json  script_detection_processed.json  subfinder_processed.json  testssl.json  testssl_processed.json  wafw00f_processed.json  whatweb.json  whatweb_processed.json
docs/v3-planning/: 01-audit.md  02-ideation.md  03-design-and-migration.md  04-kast-web-cloud-migration.md
kast/: __init__.py  config_manager.py  main.py  orchestrator.py  plugin_base.py  plugin_loader.py  registry.py  report_builder.py  report_templates.py  result_schema.py  utils.py
kast/.github/: copilot-instructions.md
kast/ai/: __init__.py  anthropic_adapter.py  base.py  config.py  http_adapter.py  prompts.py  summary.py
kast/cli/: __init__.py  _shared.py  doctor.py  main.py  plugins.py  registry.py  scan.py  self_update.py
kast/config/: ZAP_TEST_PLANS_README.md  ai.yaml.sample  default_config.yaml  zap_automation_api.yaml  zap_automation_custom_test.yaml  zap_automation_passive.yaml  zap_automation_plan_backup.yaml  zap_automation_quick.yaml  zap_automation_standard.yaml  zap_automation_thorough.yaml  zap_cloud_config.yaml  zap_config.yaml
kast/core/: atomic.py  external_binaries.py  paths.py  severity.py
kast/data/: issue_registry.json
kast/docs/: CONFIGURATION_SYSTEM.md  CONFIG_TESTING_GUIDE.md  DEBIAN_13_INSTALLER_FIX.md  DEPENDENCY_TREE_FEATURE.md  DRY_RUN_COMMAND_DISPLAY.md  EXECUTIVE_SUMMARY_IMPLEMENTATION.md  FTAP_CONFIG_MIGRATION.md  GOLANG_DETECTION_FIX.md  GOLANG_PATH_RESOLUTION_FIX.md  INSTALLER_GO_VERSION_FIX.md  INSTALLER_WGET_IMPROVEMENTS.md  INSTALL_SCRIPT_IMPROVEMENTS.md  KAST_INFO_IMPLEMENTATION.md  KATANA_CONFIG_MIGRATION.md  OBSERVATORY_CONFIG_MIGRATION.md  ORPHANED_RESOURCES_CLEANUP.md  PARALLEL_EXECUTION_IMPROVEMENTS.md  PDF_REPORT_GENERATION.md  README_CREATE_PLUGIN.md  RELATED_SITES_HOST_CENTRIC_REDESIGN.md  RELATED_SITES_IMPLEMENTATION_SUMMARY.md  RELATED_SITES_PLUGIN.md  RELATED_SITES_POSTPROCESSING_BUG_FIX.md  RELATED_SITES_RATE_LIMITING.md  RELATED_SITES_TARGET_FILTERING.md  REPORT_REVIEW_AND_IMPROVEMENTS.md  SCRIPT_DETECTION_CONFIG_MIGRATION.md  SUBFINDER_CONFIG_MIGRATION.md  TESTSSL_CONFIG_MIGRATION.md  TESTSSL_CONNECTION_FAILURE_FIX.md  TOOL_INDEX_IMPLEMENTATION.md  UBUNTU_24_COMPATIBILITY.md  UPDATE_SCRIPT_GUIDE.md  WAFW00F_CONFIG_MIGRATION.md  WHATWEB_ARGUMENT_ORDER_FIX.md  WHATWEB_CONFIG_MIGRATION.md  WHATWEB_REDIRECT_DETECTION.md  ZAP_AUTOMATION_PLAN_MONITORING.md  ZAP_CLI_OVERRIDE_FIX.md  ZAP_CLI_PRIORITY_AND_CONNECTIVITY_FIX.md  (+16 more)
kast/plugins/: README.md  __init__.py  ai_chatbot_detection_plugin.py  ai_surface_detection_plugin.py  base.py  base.py.save  cors_analyzer_plugin.py  external_tool.py  ftap_plugin.py  katana_plugin.py  observatory_plugin.py  org_discovery_plugin.py  related_sites_plugin.py  script_detection_plugin.py  subfinder_plugin.py  template_plugin.py  testssl_plugin.py  wafw00f.py  wafw00f_plugin.py  whatweb_plugin.py  zap_plugin.py
kast/report/: __init__.py  data.py  helpers.py  html.py  pdf.py  tco.py
kast/scripts/: TEST_SCRIPTS_README.md  cleanup_orphaned_resources.py  create_plugin.py  demo_executive_summary.py  demo_executive_summary_report.html  diagnose_infrastructure.py  find_zap_url.py  launch-zap.sh  monitor_zap.py  run_report_builder_test.py  ssh_executor.py  terraform_manager.py  test_infrastructure_provision.py  test_infrastructure_teardown.py  test_zap_scan.py  zap-status.sh  zap_api_client.py  zap_provider_factory.py  zap_providers.py  zap_watch_live.py
kast/templates/: _macros.html  kast_style.css  kast_style_pdf.css  report_template.html  report_template_pdf.html
kast/tests/: demo_ftap_processing.py  test_ai_anthropic_adapter.py  test_ai_base.py  test_ai_chatbot_detection.py  test_ai_config.py  test_ai_evals.py  test_ai_http_adapter.py  test_ai_prompts.py  test_ai_summary.py  test_ai_surface_detection.py  test_atomic.py  test_baseline_render.py  test_cli_ai_summary.py  test_cli_doctor.py  test_cli_plugins.py  test_cli_registry.py  test_cli_scan.py  test_cli_self_update.py  test_cli_v2_compat.py  test_config_manager_schemas.py  test_cors_analyzer.py  test_doctor_updates.py  test_executive_summary.py  test_external_binaries.py  test_external_tool_base.py  test_ftap_config.py  test_ftap_plugin.py  test_ftap_post_process.py  test_html_list_structure.py  test_kast_info.py  test_katana_config.py  test_observatory_config.py  test_observatory_post_process.py  test_paths.py  test_pdf_navigation.py  test_plugin_parsing.py  test_registry.py  test_related_sites_config.py  test_related_sites_error_handling.py  test_related_sites_filtering.py  (+19 more)
src/: main.py
(+81 files in other folders)
