[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kast"
description = "Kali Automated Scan Tool — orchestrates multiple web-application security scanners and generates HTML/PDF reports with AI-augmented executive summaries."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Michael S. Collins" },
]
keywords = ["security", "scan", "waf", "owasp", "zap", "report"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dynamic = ["version"]

dependencies = [
  # AI adapter
  "anthropic>=0.97.0",
  # CLI and output
  "click>=8.1",
  "rich>=13.7.0",
  "psutil>=5.9.6",
  # HTTP
  "requests>=2.31.0",
  "urllib3>=2.1.0",
  "certifi>=2023.11.17",
  # HTML / web parsing
  "beautifulsoup4>=4.12.2",
  "tldextract>=3.4.0",
  # DNS analysis
  "dnspython>=2.4.0",
  # Configuration / templating
  "pyyaml",
  "jinja2",
  # Report generation
  "weasyprint",
  "pillow",
  # WHOIS / Shodan (org_discovery plugin)
  "python-whois>=0.9.4",
  "shodan>=1.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-subtests",
  "ruff>=0.6",
]

[project.scripts]
kast = "kast.cli:main"

[project.urls]
Homepage = "https://github.com/mercutioviz/kast"
Repository = "https://github.com/mercutioviz/kast"
Issues = "https://github.com/mercutioviz/kast/issues"

[tool.pytest.ini_options]
filterwarnings = [
  # CORS plugin makes real HTTPS calls to example.com during tests with
  # verify=False (probing CORS bypass) — urllib3 warns for each. Not actionable.
  "ignore::urllib3.exceptions.InsecureRequestWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "build",
  "dist",
  "docs/baseline-v2.14",
  "docs/baseline-v3.0-phase-a",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
]
ignore = [
  "E501",  # line-too-long — let formatter handle when adopted; many docstrings/URLs run long
  "B008",  # function call in default arg — Click decorators use this idiom
]

[tool.ruff.lint.per-file-ignores]
"kast/tests/*" = ["E402"]  # tests sometimes import after path manipulation

[tool.setuptools]
packages = [
  "kast",
  "kast.ai",
  "kast.cli",
  "kast.core",
  "kast.plugins",
  "kast.report",
  "kast.scripts",
]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.package-data]
kast = [
  "ai/prompts/*.md",
  "config/*.yaml",
  "data/*.json",
  "templates/*.html",
  "templates/*.css",
  "templates/_macros.html",
]
